# deltachat-mcp

./: .env.example  .gitignore  README.md  build-appimage.sh  build-distribution.sh  build-portable.sh  configure.py  deltachat_mcp_gui.py  desktop-setup.sh  desktop_setup.py  launch.sh  pyproject.toml  requirements.txt  simple-build.sh  test-pairing-implementation.py  test-pairing.env  test-pairing.py  text.md
.github/workflows/: ci.yml
deltachat_mcp/: config.py  pairing.py  rpc.py  server.py  tools.py
examples/: claude_prompt.md
tests/: test_tools.py
